# ClaimsDesk_India

./: .pyre_configuration  Dockerfile  README.md  git_files.txt  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  read_err.py
backend/: main.py
backend/app/: models.py
backend/app/env/: actions.py  config.py  env.py  graders.py  rewards.py  scenarios.py  version.py
backend/app/utils/: utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: ClaimDetail.jsx  ClaimsQueue.jsx  Dashboard.jsx  Simulation.jsx
frontend/src/services/: api.js
scripts/: benchmark.py
server/: app.py
