[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claimsdesk-openenv"
version = "1.0.0"
description = "ClaimsDesk India - Professional AI insurance intelligence environment localized for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "pydantic-settings",
    "httpx",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:start_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "server*"]
